2013-11-23  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: require autoconf 2.69.

2013-11-16  Benno Schulenberg  <bensberg@justemail.net>  (tiny change)

	* src/frontend/cmd.c: small corrections in translatable strings.

2013-11-16  Sebastian Pipping <sebastian@pipping.org>  (tiny change)

	* src/adapter/main.cc: remove extra '>'.

2013-11-16  Antonio Ceballos  <aceballos@gmail.com>

	* po/gnuchess.pot: update.
	* po/LINGUAS: added eo.
	* po/es.po: update.
	* po/nl.po: update.
	* po/eo.po: added.

2013-11-08  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: clean up includes.
	* src/frontend/cmd.c: correct help gextextization.
	* configure.ac: set version 6.1.0.
	* doc/version.texi: set version 6.1.0.
	* doc/gnuchess.texi: translations section.
	* TODO: remove gettext and Spanish translation tasks.
	* po/gnuchess.pot: update.
	* po/LINGUAS: added uk, de, sr, nl.
	* po/es.po: update.
	* po/de.po: added.
	* po/uk.po: added.
	* po/sr.po: added.
	* po/nl.po: added.
	* NEWS: changes in version 6.1.0.
	* test/README: record 6.1.0 ranking in FICS.

2013-10-12  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: add #include <locale.h>.
	* src/frontend/cmd.c: remove blank spaces.
	* configure.ac: set version 6.0.93.

2013-08-27  Antonio Ceballos  <aceballos@gmail.com>

	* po/es.po: fix some formats.
	* src/frontend/cmd.c: make some texts more suitable for
	translation.
	* configure.ac: set version 6.0.92.

2013-08-26  Antonio Ceballos  <aceballos@gmail.com>

	* po/es.po: convert from ISO-8859-1 to UTF-8.
	* src/frontend/cmd.c: make some texts more suitable for
	translation.
	* configure.ac: set version 6.0.91.

2013-08-23  Antonio Ceballos  <aceballos@gmail.com>

	* po/es.po: add some Spanish translations.

2013-08-23  Antonio Ceballos  <aceballos@gmail.com>

	gettextize GNU Chess:

	* configure.ac: add gettext macros; set version 6.0.90.
	* Makefile.am: add gettext flags.
	* src/Makefile.am: add gettext flags.